# doubloon

./: .cspell.json  .editorconfig  .gitignore  .pylintrc  .todo  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: check_yahoo_api.yml  ci.yml  claude.yml
src/: doubloon.py
src/appui/: __init__.py  _footer.py  _lenient_assignment_mixin.py  _messages.py  _quote_column_definitions.py  _quote_table.py  _watchlist_screen.py  clock.py  column_chooser_screen.py  column_protocols.py  doubloon_app.py  doubloon_app.tcss  doubloon_config.py  doubloonapp.py  doubloonapp.tcss  enhanced_data_table.py  enums.py  footer.py  formatting.py  lenient_assignment_mixin.py  messages.py  quote_column_definitions.py  quote_search_screen.py  quote_table.py  search_screen.py  stock_search_screen.py  stockyardapp.py  watchlist_config.py  watchlist_screen.py
src/calahan/: README.md  __init__.py  _yasync_client.py  enums.py  exceptions.py  types.py  yfinance.py  yquote.py  ysearch_result.py
src/yfinance/: _yasync_client.py  _ysync_client.py  yautocomplete.py
tests/: __init__.py  fake_yfinance.py  test_ysearch.json  test_ysearch_btc.json
tests/appui/: __init__.py  helpers.py  test_column_chooser_screen.py  test_doubloon_app.py  test_doubloonapp_config.py  test_enhanced_data_table.py  test_enums.py  test_formatting.py  test_helpers.py  test_quote_column_definitions.py  test_quote_search_screen.py  test_quote_table.py  test_quote_table_cells.py  test_quote_table_data.py  test_search_screen.py  test_stock_search_screen.py  test_stockyardapp_config.py  test_watchlist_config.py  test_watchlist_screen.py
tests/calahan/: __init__.py  test_yasync_client.py  test_yfinance.py  test_yquote.py  test_ysearch_result.py
tests/calahan/integration/: __init__.py  test_yfinance_integration.py
tests/tools/: __init__.py  test_decorator_docstring_suppress_checker.py
tools/: __init__.py
tools/pylint_plugins/: __init__.py  decorator_docstring_suppress_checker.py
